Body element updated with zoom and transform properties to prevent horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -652,8 +652,15 @@ aside {
 
 /* Media query for laptops */
 @media only screen and (min-width: 601px) and (max-width: 830px) {
+
+  body {
+    zoom: 0.8;
+    transform: scale(0.8);
+    transform-origin: 0 0;
+  }
+
   .header {
-    width: 115%;
+    width: 125%;
     padding-bottom: 10px;
   }
 
@@ -664,7 +671,7 @@ aside {
   }
 
   .hero {
-    width: 115%;
+    width: 125%;
     height: 170px;
   }
 
